SPMORANGLE-48 Staff—manage my own tasks (RBAC: staff) (#31)
* SPMORANGLE-48 (BE) Responses to Task queries now respond with flag if user has write access or not

* SPMORANGLE-48 (BE) Develop / modify existing tests

* SPMORANGLE-48 Add Frontend logic to show if user can update/delete tasks

* SPMORANGLE-48 Update mvp-data.ts

* SPMORANGLE-48 fix FE npm typecheck

* SPMORANGLE-48 (BE) Develop / canUserUpdateOrDeleteTask service helper method in TaskService for future development use